--- a/css/style.css
+++ b/css/style.css
@@ -385,8 +385,12 @@ body {
 
 .news-content{
 	margin-left: var(--mb-5);
-	justify-content: center;
-	display: block;
+}
+
+.news{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 .news-content .bold{
@@ -481,12 +485,7 @@ body {
     justify-self: center;
   }
 
-  .news{
-	display: flex;
-	justify-content: center;
-   }
-
-  .news-content{
+  .news-contents{
 	margin-left: var(--mb-5);
 	grid-template-columns: repeat(2, 1fr);
   	justify-content: center;
@@ -531,6 +530,12 @@ body {
   .new__img {
     width: 250px;
   }
+
+  .news{
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+   }
 
 }
 
