--- a/css/style.css
+++ b/css/style.css
@@ -352,6 +352,19 @@ body {
   margin-bottom: var(--mb-2);
 }
 
+.new__pop{
+	position: absolute;
+	top: .8rem;
+	left: .5rem;
+	font-size: var(--mb-2);
+	color: #fff;
+	border: .3px solid red;
+	border-radius: 50%;
+	background-color: rgb(255, 0, 0);
+	font-weight: var(--font-semi-bol);
+	padding: .3rem .5rem;
+}
+
 .new__name,
 .name__preci {
   font-weight: var(--font-semi-bold);
